2008-09-25  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Mark Rowe

        Roll out 36771 as it caused <rdar://problem/6246554>
        "nytimes.com doesn't display after returning to it with back/forward"

        * css/CSSImportRule.cpp:
        (WebCore::CSSImportRule::insertedIntoParent):
        * css/CSSRule.cpp:
        (WebCore::CSSRule::parentStyleSheet):
        (WebCore::CSSRule::parentRule):
        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::CSSStyleSheet):
        (WebCore::CSSStyleSheet::docLoader):
        * css/CSSStyleSheet.h:
        (WebCore::CSSStyleSheet::doc):

2008-09-25  Adam Roben  <aroben@apple.com>

        Windows build fix

        * WebCore.vcproj/WebCore.vcproj: Add ScrollView.cpp to the project.

2008-09-25  Dan Bernstein  <mitz@apple.com>

        - Windows build fix

        * platform/win/ScrollViewWin.cpp:
        (WebCore::ScrollView::addChildPlatformWidget):
        (WebCore::ScrollView::removeChildPlatformWidget):

2008-09-25  Timothy Hatcher  <timothy@apple.com>

        Fixes a leak of ConsoleMessage seen when repeated console
        messages occur.

        Reviewed by Mark Rowe.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::addConsoleMessage): Delete the repeat
        since we don't add it to m_consoleMessages.

2008-09-25  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Dan Bernstein.

        Bug 21105: XHRs logged in the console may show the wrong URL for the
        source
        - Get the url at the time of the send() and pass it on to the XHR.

        * bindings/js/JSXMLHttpRequestCustom.cpp:
        (WebCore::JSXMLHttpRequest::send):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::didFinishLoading):
        * xml/XMLHttpRequest.h:
        (WebCore::XMLHttpRequest::setLastSendURL):

2008-09-25  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Geoff and Tim.
